# generate-anki-deck

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/fr_anki/: base_anki.py  fr_verb_anki.py  main.py
tests/: test_verb_ankideck.py  test_verb_deckargs.py
tests/data/: test_verb.txt
