[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "fr-anki"  
version = "0.1.0"
description = "Provide a French infinitive verb and specify desired tense(s), the tool automatically generate Anki deck for all person-specific conjugations"
authors = [
    { name = "Yenyen Wang", email = "wangyenyen.st00g@g2.nctu.edu.tw" }
]
readme = "README.md"
requires-python = ">= 3.9"
dependencies = [
    "fr_audio"
]
license = "LGPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]


[project.optional-dependencies]
test = ["pytest"]
dev = [
    "pytest",
    "ruff",
    "pre-commit"
]

[project.scripts]
fr-audio = "fr_anki.main:main"