[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "fr-anki"  
version = "0.1.0"
description = "Provide a list of French infinitive verbs and specify desired tense(s), the tool automatically generate Anki deck for all person-specific conjugations"
authors = [
    { name = "Yenyen Wang", email = "wangyenyen.st00g@g2.nctu.edu.tw" }
]
readme = "README.md"
requires-python = ">= 3.9"
dependencies = [
    "fr_audio",
    "genanki"
]
license = "LGPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]


[project.optional-dependencies]
test = ["pytest"]
dev = [
    "pytest",
    "ruff",
    "pre-commit"
]

[project.scripts]
fr-anki = "fr_anki.main:main"